--- a/frontend/src/ui/styles/components/game_records_table.scss
+++ b/frontend/src/ui/styles/components/game_records_table.scss
@@ -24,13 +24,17 @@
 }
 
 @mixin playerLink {
-  span {
-    &[winner] {
-      color: darken(green, 9%);
-    }
+  route-link {
+    color: darken(blue, 30%);
 
-    &[loser] {
-      color: darken(red, 30%);
+    span {
+      &[winner] {
+        color: darken(green, 9%);
+      }
+
+      &[loser] {
+        color: darken(red, 30%);
+      }
     }
   }
 }
