--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -59,7 +59,7 @@ footer foot-er {
   justify-content: center;
   padding-bottom: 5px;
   padding-top: 10px;
-  background-color: #d4d4d4;
+  background-color: #cacaca;
 }
 footer foot-er svg {
   width: 24px;
