--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -135,8 +135,7 @@ game-records-table route-link.card {
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
   transition: all 0.15s ease-in-out;
   font-size: 1.1rem;
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   margin-bottom: 10px;
   align-items: center;
 }
@@ -159,8 +158,7 @@ game-records-table route-link.card img {
   border-radius: 10px;
 }
 game-records-table #legend {
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   align-items: center;
   margin-bottom: 10px;
   font-weight: bold;
@@ -256,8 +254,7 @@ game-events-table route-link.card {
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
   transition: all 0.15s ease-in-out;
   font-size: 1.1rem;
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   margin-bottom: 10px;
   align-items: center;
 }
@@ -280,8 +277,7 @@ game-events-table route-link.card img {
   border-radius: 10px;
 }
 game-events-table #legend {
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   align-items: center;
   margin-bottom: 10px;
   font-weight: bold;
@@ -364,8 +360,7 @@ players-table route-link.card {
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
   transition: all 0.15s ease-in-out;
   font-size: 1.1rem;
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   margin-bottom: 10px;
   align-items: center;
 }
@@ -388,8 +383,7 @@ players-table route-link.card img {
   border-radius: 10px;
 }
 players-table #legend {
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   align-items: center;
   margin-bottom: 10px;
   font-weight: bold;
@@ -518,8 +512,7 @@ player-view #player-personal-card #player-personal-card-content {
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
   transition: all 0.15s ease-in-out;
   font-size: 1.1rem;
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
   margin-bottom: 10px;
   align-items: center;
 }
@@ -548,19 +541,96 @@ player-view #player-personal-card #player-personal-card-legend {
   align-items: center;
   margin-bottom: 10px;
   font-weight: bold;
-  padding: 12px 8px;
-  padding-right: 12px;
+  padding: 10px 10px;
 }
 
 game-record-view {
   display: grid;
   grid-template-columns: 1fr;
-  grid-row-gap: 20px;
+  grid-row-gap: 30px;
   justify-items: center;
 }
 game-record-view #glift {
   width: 500px;
   height: 500px;
+}
+game-record-view #players-names {
+  display: grid;
+  grid-template-columns: 400px max-content 400px;
+  grid-template-rows: max-content;
+  grid-column-gap: 15px;
+  grid-template-areas: "black-name vs white-name";
+}
+game-record-view #players-names h2 {
+  display: flex;
+  gap: 10px;
+}
+game-record-view #players-names h2#black {
+  justify-content: end;
+}
+game-record-view #players-names h2#white {
+  justify-content: start;
+}
+game-record-view #card span:not(.align-left) {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+game-record-view #card .align-left {
+  display: flex;
+  justify-content: left;
+  text-align: left;
+}
+game-record-view #card #legend {
+  display: grid;
+  grid-template-columns: 110px 80px 100px;
+  grid-column-gap: 10px;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 10px;
+  font-weight: bold;
+  padding: 10px 10px;
+}
+game-record-view #card #content {
+  display: grid;
+  grid-template-columns: 110px 80px 100px;
+  grid-column-gap: 10px;
+  justify-items: center;
+  margin-bottom: 35px;
+  width: max-content;
+  background: whitesmoke;
+  border: 3px solid #eee;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
+  transition: all 0.15s ease-in-out;
+  font-size: 1.1rem;
+  padding: 10px 10px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+game-record-view #card #content:hover {
+  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
+  transform: translate3d(0px, -0.5px, 0px);
+}
+game-record-view #card #content route-link {
+  color: #000066;
+}
+game-record-view #card #content route-link span[winner] {
+  color: #005200;
+}
+game-record-view #card #content route-link span[loser] {
+  color: #660000;
+}
+game-record-view #card #content img {
+  max-width: 70px;
+  max-height: 70px;
+  border-radius: 10px;
+}
+game-record-view #card a#download {
+  padding: 8px;
+  border: 2px solid gray;
+  border-radius: 4px;
+  color: black;
 }
 
 unknown-view {
