--- a/frontend/src/ui/styles/views/game_record_view.scss
+++ b/frontend/src/ui/styles/views/game_record_view.scss
@@ -45,12 +45,14 @@ game-record-view {
 
   #card {
     @include grt.spanAlignment;
-
+    
     @mixin cardLegendGrid {
+      $downloadWidth: 100px;
+
       display: grid;
       grid-template-columns:
         grt.$eloDeltaWidth grt.$eloWidth
-        grt.$handicapWidth grt.$dateWidth 80px 100px grt.$eventWidth
+        grt.$handicapWidth grt.$dateWidth grt.$resultWidth $downloadWidth grt.$eventWidth
         grt.$eloWidth grt.$eloDeltaWidth;
       grid-column-gap: grt.$columnGap;
       justify-items: center;
