--- a/frontend/src/ui/styles/views/game_event_view.scss
+++ b/frontend/src/ui/styles/views/game_event_view.scss
@@ -1,4 +1,5 @@
 @use "../components/game_records_table" as grt;
+@use "../components/game_events_table" as get;
 @use "../components/players_table" as pt;
 
 game-event-view {
@@ -18,7 +19,10 @@ game-event-view {
 
     @mixin cardLegendGrid {
       display: grid;
-      grid-template-columns: grt.$dateWidth grt.$dateWidth pt.$gamesTotalWidth;
+      grid-template-columns:
+        get.$gameEventTypeWidth
+        grt.$dateWidth grt.$dateWidth
+        pt.$gamesTotalWidth;
       grid-column-gap: grt.$columnGap;
       justify-items: center;
     }
